--- a/index.html
+++ b/index.html
@@ -30,47 +30,93 @@
     </script>
     <!-- Tailwind CUSTOM CSS -->
     <style>
-        .font-manrope{
+        .font-manrope {
             font-family: 'Manrope', sans-serif;
         }
-
     </style>
 </head>
-
+ 
 <body class="font-manrope">
     <header class="container mx-auto">
+        <!-- Navbar section  -->
         <div class="navbar bg-white">
             <div class="navbar-start">
-              <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-[#424247]">
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Pages</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
                 </div>
-                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-[#424247]">
-                  <li><a>Home</a></li>
-                  <li><a>About</a></li>
-                  <li><a>Pages</a></li>
-                  <li><a>Blog</a></li>
-                  <li><a>Contact</a></li>
-                </ul>
-              </div>
-              <h1 class="text-4xl font-extrabold text-[#131318]">Hockey’s</h1>
+                <h1 class="text-4xl font-extrabold text-[#131318]">Hockey’s</h1>
             </div>
             <div class="navbar-center hidden lg:flex">
-              <ul class="menu menu-horizontal px-1">
-                <li><a>Home</a></li>
-                <li><a>About</a></li>
-                <li><a>Pages</a></li>
-                <li><a>Blog</a></li>
-                <li><a>Contact</a></li>
-              </ul>
+                <ul class="menu menu-horizontal px-1">
+                    <li><a>Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Pages</a></li>
+                    <li><a>Blog</a></li>
+                    <li><a>Contact</a></li>
+                </ul>
             </div>
             <div class="navbar-end gap-6">
                 <img class="hidden lg:block" src="assets/Images/seachicon.svg" alt="">
-              <a class="btn bg-[#FF4240] text-white rounded-lg font-semibold text-2xl">Get Ticket</a>
+                <a class="btn bg-[#FF4240] text-white rounded-lg font-semibold text-2xl">Get Ticket</a>
             </div>
-          </div>
+        </div>
+        <!-- Banner section -->
+        <div class="container mx-auto mt-4 lg:mt-16">
+            <!-- carousel container -->
+            <div class="carousel ">
+                <!-- Slider one-->
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="assets/Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- Slider two -->
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="assets/Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="assets/Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="assets/Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+            <!-- banner footer section -->
+            <div class="absolute lg:-mt-44 lg:ml-[750px] bg-black rounded-2xl p-8 my-8">
+                <h2 class=" text-[18px] lg:text-2xl text-white font-extrabold">Meet all the heroes from the field</h2>
+                <p class="mt-4 text-[#ffffff99]">Hockey Icons: Unveiling the Stories of Courage, Skill, and <br>
+                    Inspiration Behind Our Beloved Ice-Game Heroes</p>
+            </div>
 
-        <div></div>
+        </div>
     </header>
 
 </body>
