fixed get in touch section totally

--- a/index.html
+++ b/index.html
@@ -464,20 +464,20 @@
         <!-- <div class="grid gap-6 grid-cols-1 lg:grid-cols-3 bg-orange-400 px-6"></div> -->
         <div class="grid gap-6 grid-cols-1 lg:grid-cols-3 px-6">
             <div class="lg:col-span-1 space-y-2 my-5">
-                <div class="bg-[#BCED6D1A] rounded-2xl p-10 cursor-pointer">
+                <div class="bg-[#BCED6D1A] rounded-2xl p-10 cursor-pointer space-y-3">
                     <img src="assets/Images/Group 1171275317.png" alt="">
-                    <h3>Phone Number</h3>
-                    <h2>(+62) 123-321-543</h2>
+                    <h3 class="text-[16px] text-[ #13131866]">Phone Number:</h3>
+                    <h2 class="text-[18px] text-[#131318] font-extrabold">(+62) 123-321-543</h2>
                 </div>
-                <div class="bg-[#FDDD5F1A] rounded-2xl p-10 cursor-pointer">
+                <div class="bg-[#FDDD5F1A] rounded-2xl p-10 cursor-pointer space-y-3">
                     <img src="assets/Images/Group 1171275318.png" alt="">
-                    <h3>Email:</h3>
-                    <h2>hockeys@support.com</h2>
+                    <h3 class="text-[16px] text-[ #13131866]">Email:</h3>
+                    <h2 class="text-[18px] text-[#131318] font-extrabold">hockeys@support.com</h2>
                 </div>
-                <div class="bg-[#629CF31A] rounded-2xl p-10 cursor-pointer">
+                <div class="bg-[#629CF31A] rounded-2xl p-10 cursor-pointer space-y-3">
                     <img src="assets/Images/Group 1171275321.png" alt="">
-                    <h3>Location:</h3>
-                    <h2>152/1 Mohakhali Wireless Gate</h2>
+                    <h3 class="text-[16px] text-[ #13131866]">Location:</h3>
+                    <h2 class="text-[18px] text-[#131318] font-extrabold">152/1 Mohakhali Wireless Gate</h2>
                 </div>
 
             </div>
@@ -508,7 +508,7 @@
               </div>
               <label for="text-area"  class="text-xl  text-[#131318] font-bold">Message</label><br>
               <textarea cols="5" placeholder="Write your message"
-                class="bg-[#ceceea72] h-[170px] p-3 pb-10 lg:w-[720px] rounded-lg "></textarea><br>
+                class="bg-[#ceceea72] h-[250px] p-3 pb-10 lg:w-[720px] rounded-lg "></textarea><br>
               <button class="btn -ml-1 text-xl text-white font-bold lg:w-[720px] bg-red-600 ">Send Message</button>
             </div>
           </form>
