--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!--favicon  -->
+    <link rel="shortcut icon" href="assets/Images/1.png" type="image/x-icon">
     <!-- font awesome kit  -->
     <script src="https://kit.fontawesome.com/3555afa00a.js" crossorigin="anonymous"></script>
     <!-- tailwind custom Color -->
